# deki

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  setup.cfg
examples/: example.ipynb
src/deki/: __init__.py  ackley.py  ackleyn2.py  ackleyn3.py  ackleyn4.py  adjiman.py  alpinen1.py  alpinen2.py  baele.py  bartels.py  bird.py  bohachevsky_n1.py  bohachevsky_n2.py  bohachevsky_n3.py  rosenbrock.py  sphere.py  visualizer.py
