[metadata]
name = nadir
version = attr: deki.__version__
description = Nadir is a library of bleeding-edge optimisers built for speed and functionality in PyTorch for researchers
long_description = file: README.md 
keywords = 
    machine learning
    optimization
    adam-optimizer
license = Apache-2.0 License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7
install_requires =
    matplotlib
    imageio
    numpy
    torch
    tqdm

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    tests*