[metadata]
name = deki
version = attr: deki.__version__
description = Deki is a library is to create beautiful interative visuals to understand your optimizer better, because seeing is believing!
long_description = file: README.md 
keywords = 
    machine learning
    optimization
    visualization
license = Apache-2.0 License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.7
install_requires =
    matplotlib
    imageio
    numpy
    torch
    tqdm

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    tests*
